# wordlex

./: .gitignore  README.md  TECHNICAL_DETAILS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PERF_RESULTS.md
scripts/: benchmark-cli-latency.sh  measure-memory.sh  preserve-deb-artifacts.sh
src/: About.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  wordlex.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  server.rs
src/components/: EmptyState.tsx  LoadingSkeleton.tsx  LogoIcon.tsx  POSBadge.tsx  RelatedWords.tsx  SearchBar.tsx  SenseCard.tsx  SettingsModal.tsx  TitleBar.tsx  WordDetail.tsx
src/hooks/: useHistory.ts  useWordDetail.ts  useWordSearch.ts
src/lib/: utils.ts
src/types/: index.ts
