[package]
name = "wordlex"
version = "0.1.0"
description = "A native Linux dictionary and thesaurus powered by Open English WordNet"
authors = ["Vedesh Padal <https://github.com/vedesh-padal>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vedesh-padal/wordlex"

[lib]
name = "wordlex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4"
